Bug 156128 - Drawing objects can be hyperlinked by drag-and-drop from Navigator, but link is not functional
Summary: Drawing objects can be hyperlinked by drag-and-drop from Navigator, but link ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: Navigator Hyperlink
  Show dependency treegraph
 
Reported: 2023-07-03 04:51 UTC by Jim Raykowski
Modified: 2023-07-05 13:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2023-07-03 04:51:14 UTC
Steps to reproduce:

1. Open Writer
2. Insert some text, perhaps type 'lorem' and then press F3
3. Insert some shapes, Menu > Insert > Shape
4. Open either the sidebar or floating Navigator, Menu > View > Navigator or Ctrl + F5 or Ctrl + Alt + 4
3. Drag and drop a Drawing objects category entry (shape entry) from the navigator content view onto the document (using the "hyperlink" drag mode).

Result: A hyperlink is inserted but is not functional with ctrl + click.

Expected: The hyperlink works the same as when inserted with the Hyperlink dialog Target in Document, Insert > Hyperlink > Document > Target in Document.
Comment 1 stragu 2023-07-03 08:50:16 UTC
Was already the case in OOo 3.3, so inherited. No appended "|<category>" like Images have.

Repro in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e4e5fb4b2935e395c7e4b3a794d544a6f44709ce
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2023-07-04 04:43:07 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c4515f6be4a0ec923d85fd6b4c85bfaafb0b26ae

tdf#156128 Make drawing object hyperlinks created by dnd

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Jim Raykowski 2023-07-04 04:48:37 UTC
Stragu, thank you for confirming and tracking down what version this bug first appeared.
Comment 4 Commit Notification 2023-07-04 19:08:14 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7d5870ba7a505db8251a34448a11643eae14936e

tdf#156128 Make drawing object hyperlinks created by dnd

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2023-07-05 13:58:00 UTC
Thanks for the fix, Jim!

Verified the fix in-app and in exported PDF with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d74344f6cae0cf1c12f08249c8f49be1374fb98f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded