tdf#156128 Make drawing object hyperlinks created by dnd

from Navigator functional

Change-Id: Ic12f3c43c079865e31c3bb89d9f277d3567d8c01
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153887
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit c4515f6be4a0ec923d85fd6b4c85bfaafb0b26ae)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153924
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>